# RulPython

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Python/: CMakeLists.txt
Python/src/: module.cpp
doc/: Makefile  conf.py  examples.rst  index.rst  make_doc.sh  reference.rst
doc/examples/: main.py
include/: BaseApplication.h  ExampleApplication.h  PythonApplication.h  PythonRefereeCommand.h  PythonVisionFrame.h  StrategieEngine.h  StrategiePlugin.h  utils.h
scripts/: main.py
src/: BaseApplication.cpp  ExampleApplication.cpp  PythonApplication.cpp  StrategieEngine.cpp  utils.cpp
